# ChangeLog for net-libs/libgsasl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libgsasl/ChangeLog,v 1.34 2007/09/30 14:26:04 ticho Exp $

*libgsasl-0.2.21 (30 Sep 2007)

  30 Sep 2007; Andrej Kacian <ticho@gentoo.org> +libgsasl-0.2.21.ebuild:
  Version bump.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  07 Jun 2006; Tom Martin <slarti@gentoo.org> libgsasl-0.2.4.ebuild:
  Missing idn from IUSE, resolves bug #135990.

*libgsasl-0.2.10 (02 Jan 2006)

  02 Jan 2006; Tom Martin <slarti@gentoo.org> libgsasl-0.2.4.ebuild,
  +libgsasl-0.2.10.ebuild:
  Version bump, resolves bug #117318.

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> libgsasl-0.2.4.ebuild:
  Mark 0.2.4 stable on alpha

  24 Aug 2005; Aron Griffis <agriffis@gentoo.org> libgsasl-0.2.4.ebuild:
  stable on ia64

  05 Jul 2005; Tom Martin <slarti@gentoo.org> libgsasl-0.2.4.ebuild:
  Marked ~ia64.

  02 May 2005; Michael Hanselmann <hansmi@gentoo.org> libgsasl-0.2.4.ebuild:
  Stable on ppc.

  02 May 2005; Elfyn McBratney <beu@gentoo.org> libgsasl-0.2.4.ebuild:
  Stable on x86.

  19 Apr 2005; Tom Martin <slarti@gentoo.org> -libgsasl-0.2.0.ebuild:
  Version purge.

  19 Apr 2005; Markus Rothe <corsair@gentoo.org> libgsasl-0.2.4.ebuild:
  Stable on ppc64

  19 Apr 2005; Tom Martin <slarti@gentoo.org> libgsasl-0.2.4.ebuild:
  Stable on amd64 and sparc.

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> libgsasl-0.2.3.ebuild:
  Stable on ppc64

  07 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> libgsasl-0.2.4.ebuild:
  ~alpha keyword.

  10 Mar 2005; Tom Martin <slarti@gentoo.org> libgsasl-0.2.4.ebuild:
  Marked ~sparc

  22 Jan 2005; Tom Martin <slarti@gentoo.org> -libgsasl-0.1.4.ebuild:
  Purge old versions.

  22 Jan 2005; Andrej Kacian <ticho@gentoo.org> libgsasl-0.2.3.ebuild:
  Stable on x86.

  22 Jan 2005; Lars Weiler <pylon@gentoo.org> libgsasl-0.2.3.ebuild:
  Stable on ppc.
