@@ -1,6 +1,13 @@
 # ChangeLog for net-libs/libgsasl
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libgsasl/ChangeLog,v 1.34 2007/09/30 14:26:04 ticho Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libgsasl/ChangeLog,v 1.35 2008/06/15 13:04:17 dertobi123 Exp $
+
+*libgsasl-0.2.26 (15 Jun 2008)
+
+  15 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  +libgsasl-0.2.26.ebuild:
+  Version bump (#217015), remove useless virtual/libc depend, remove static
+  use flag (#165740)
 
 *libgsasl-0.2.21 (30 Sep 2007)
 
